<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="currentImgUri"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="32dp"
            tools:context=".ui.AddPhotoFragment">

            <ImageButton
                android:id="@+id/provide_image_button"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="centerCrop"
                app:imageButtonUri="@{currentImgUri}"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/provide_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Hello title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/provide_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Hello description" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>


</layout>

